syntax = "proto3";

option csharp_namespace = "ArkivGPT_Gateway";

package summary;

// The greeting service definition.
service Summary {
  // Sends a greeting
  rpc SaySummary (SummaryRequest) returns (stream SummaryReply);
}

// The request message containing the user's name.
message SummaryRequest {
  int32 StartId = 1;
  int32 Gnr = 2;
  int32 Bnr = 3;
  int32 Snr = 4;
}

// The response message containing the greetings.
message SummaryReply {
  int32 Id = 1;
  string Resolution = 2;
  string Document = 3;
}

